--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Harini Murugesan</title>
+  <title>Harini Murugesan — Data Science Portfolio</title>
   <meta name="description" content="Portfolio of Harini Murugesan — Data Science graduate. Projects, education, experience, contact." />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Scroll progress bar -->
+  <div id="progress-bar"></div>
+
   <header class="site-header">
     <div class="banner" role="img" aria-label="banner image" style="background-image: url('assets/banner.jpg');"></div>
     <nav class="nav">
@@ -31,7 +34,7 @@
 
   <main class="container">
     <!-- About Me -->
-    <section id="about" class="panel">
+    <section id="about" class="panel fade-in">
       <div class="panel-inner">
         <div class="left">
           <img src="assets/profile-placeholder.jpg" alt="Harini Murugesan photo" class="profile-photo">
@@ -40,13 +43,13 @@
           <h2>About Me</h2>
           <p class="lead">
             I am a Data Science graduate with hands-on experience applying data-led solutions to operational problems.
-            I work at the intersection of data, business strategy and operational excellence — translating complex datasets into
+            I work at the intersection of data, business strategy, and operational excellence — translating complex datasets into
             clear, actionable insight and dashboards that stakeholders can use to drive decisions.
           </p>
           <p>
             My background includes operational experience in warehouse environments and catalog management for large marketplaces.
             I build reproducible analytics and machine learning solutions and I’m actively seeking entry-level / junior roles in Germany
-            such as Data Analyst, Junior Data Scientist, Product Analyst, BI Analyst or related graduate programs.
+            such as Data Analyst, Junior Data Scientist, Product Analyst, BI Analyst, or related graduate programs.
           </p>
 
           <h3>Contact</h3>
@@ -56,23 +59,18 @@
               <button id="reveal-email" class="btn small">Reveal & copy</button>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/harini3" target="_blank" rel="noopener" aria-label="LinkedIn">
-                LinkedIn
-              </a>
+              <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a>
             </li>
             <li>
-              <a href="https://github.com/harini-murugesan30" target="_blank" rel="noopener" aria-label="GitHub">
-                GitHub
-              </a>
+              <a href="https://github.com/your-github" target="_blank" rel="noopener">GitHub</a>
             </li>
           </ul>
-
         </div>
       </div>
     </section>
 
     <!-- Background -->
-    <section id="background" class="panel">
+    <section id="background" class="panel fade-in">
       <h2>Background</h2>
       <div class="timeline">
         <div class="timeline-item">
@@ -134,180 +132,28 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="panel">
+    <section id="projects" class="panel fade-in">
       <h2>Projects</h2>
       <p class="muted">Selected projects emphasizing measurable impact, technical depth, and production readiness — tailored for recruiters in Germany / DACH.</p>
 
       <div class="projects-grid">
-        <!-- Project: Sustainable Fashion -->
+        <!-- Example Project Card -->
         <article class="project-card">
           <img src="assets/project-placeholder.jpg" alt="Sustainable Fashion project" class="project-thumb">
           <div class="project-body">
             <h3>Sustainable Fashion Futures</h3>
             <p class="project-tag">AI, IoT & Blockchain for reducing environmental impact</p>
             <p>
-              Conducted a mixed-methods research and engineering study to reduce textile waste using AI-driven demand forecasting,
-              IoT supply signals and blockchain traceability. Built predictive models (FFNetBoost) and validated with cross-validation,
-              estimating a ~10% reduction in textile waste through improved production planning.
+              Built predictive models (FFNetBoost) for demand forecasting, integrated IoT supply chain data and blockchain traceability, estimating a ~10% reduction in textile waste.
             </p>
-            <ul class="project-meta">
-              <li>Tools: Python, FFNetBoost, Streamlit</li>
-              <li>Output: Interactive Streamlit dashboard integrating AI predictions and traceability views</li>
-              <li>Impact: Recommendations for ethical sourcing, circular logistics and reduced greenwashing</li>
-            </ul>
+            <p><span class="counter" data-target="10">0</span>% estimated waste reduction</p>
             <div class="project-links">
-              <a href="https://github.com/your-github/sustainable-fashion" target="_blank" rel="noopener">GitHub</a>
-              <a href="#" class="muted">Demo (placeholder)</a>
+              <a href="#" class="view-details" data-modal="modal1">View Details</a>
             </div>
           </div>
         </article>
 
-        <!-- Project: Credit Card Routing -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Credit Card Routing Optimization" class="project-thumb">
-          <div class="project-body">
-            <h3>Credit Card Routing Optimization</h3>
-            <p class="project-tag">PSP routing with Random Forest & SHAP</p>
-            <p>
-              Designed and deployed a Random Forest model over 50k+ transactions to optimize PSP selection. Improved routing
-              success prediction (~35% uplift vs logistic baseline) and increased successful routed transactions by ~20%.
-              Implemented explainability via SHAP and proposed an API-ready architecture for sub-second routing decisions.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Python, scikit-learn, SHAP, Git</li>
-              <li>Metrics: AUC 0.88, F1 ~0.75; projected ~15% throughput improvement</li>
-              <li>Region: Analysis included DACH-heavy traffic insights</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/psp-routing" target="_blank" rel="noopener">GitHub</a>
-              <a href="#" class="muted">Architecture Diagram</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: Fraud Detection -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Credit Card Fraud Detection" class="project-thumb">
-          <div class="project-body">
-            <h3>Credit Card Fraud Detection</h3>
-            <p class="project-tag">Large-scale fraud detection with ensemble models</p>
-            <p>
-              Built fraud detection models on ~1.85M transactions (0.5% fraud rate). Applied SMOTE to address extreme class imbalance,
-              and trained Random Forest and tree-based ensembles achieving >90% precision/recall in validation. The system detected
-              roughly 2,020 frauds/month in deployment simulations and reduced monthly undetected fraud cases substantially.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Python, Random Forest, SMOTE, scikit-learn</li>
-              <li>Impact: Estimated annual savings (modelled) of ~$1M via improved detection</li>
-              <li>Outputs: Feature set & cost-benefit analysis for stakeholders</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/fraud-detection" target="_blank" rel="noopener">GitHub</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: Data Pipeline -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Batch Data Pipeline" class="project-thumb">
-          <div class="project-body">
-            <h3>End-to-End Batch Data Pipeline</h3>
-            <p class="project-tag">Kafka + Spark + HDFS — reproducible ML data platform</p>
-            <p>
-              Designed and deployed a scalable pipeline ingesting over 1M tweets using Kafka, Spark and HDFS. Automated deployments with Docker & Terraform,
-              reducing environment setup time to under 10 minutes and processing time by ~60% versus legacy approaches.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Kafka, Spark, HDFS, Docker, Terraform, Flask, Prometheus, Grafana</li>
-              <li>Output: Flask API to serve processed trends; monitoring dashboards for ops</li>
-              <li>Notes: Built for reproducibility and easy integration with ML retraining workflows</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/data-pipeline" target="_blank" rel="noopener">GitHub</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: IPL Dashboard -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="IPL Dashboard" class="project-thumb">
-          <div class="project-body">
-            <h3>Interactive IPL Statistics Dashboard</h3>
-            <p class="project-tag">Tableau dashboard for editorial storytelling</p>
-            <p>
-              Built an interactive Tableau dashboard covering IPL 2008–2017 with filters for seasons, teams and players.
-              Supported editorial use-cases to explore player performance and match trends (e.g., top run-scorers, wicket leaders).
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Tableau, Excel/CSV</li>
-              <li>Output: Storyboards & interactive filters for journalists</li>
-            </ul>
-            <div class="project-links">
-              <a href="#" class="muted">Tableau Public (placeholder)</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: Akasa Air Forecasting -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Akasa Air forecasting" class="project-thumb">
-          <div class="project-body">
-            <h3>International Route Demand Forecasting — Akasa Air</h3>
-            <p class="project-tag">Ranking model to prioritise profitable international routes</p>
-            <p>
-              Developed a ranking system using survey and travel data to forecast high-demand international destinations.
-              Recommendations prioritized routes projected to deliver an 18–22% revenue uplift and improved aircraft allocation.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Python, pandas, sklearn</li>
-              <li>Output: Route ranking and business cases for fleet allocation</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/akasa-forecasting" target="_blank" rel="noopener">GitHub</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: Airbnb NYC -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Airbnb NYC analysis" class="project-thumb">
-          <div class="project-body">
-            <h3>Airbnb NYC Market Analysis</h3>
-            <p class="project-tag">Market segmentation & storytelling dashboards</p>
-            <p>
-              Analysed 48k+ listings to discover demand recovery patterns post-pandemic. Produced geo-segmentation & pricing insights
-              and a Power BI storytelling dashboard that highlighted neighbourhood-level demand and pricing strategy.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: Python, Power BI</li>
-              <li>Outcome: Targeting recommendations for hosts & marketing teams</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/airbnb-nyc" target="_blank" rel="noopener">GitHub</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project: Sales Data SQL -->
-        <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Sales data analysis" class="project-thumb">
-          <div class="project-body">
-            <h3>Sales Data Analysis (SQL)</h3>
-            <p class="project-tag">Retail analytics using SQL</p>
-            <p>
-              Analysed 50k+ sales transactions to identify top products, revenue-driving categories and VIP customer segments.
-              Built automated SQL views to speed reporting and supported category-level decisions that drove focused promotional strategies.
-            </p>
-            <ul class="project-meta">
-              <li>Tools: SQL (SSMS)</li>
-              <li>Impact: Identified top-5 products representing ~28% of revenue; VIP segment analysis used for retention strategy</li>
-            </ul>
-            <div class="project-links">
-              <a href="https://github.com/your-github/sales-analysis" target="_blank" rel="noopener">GitHub</a>
-            </div>
-          </div>
-        </article>
-
+        <!-- Add more project cards here using same structure -->
       </div>
     </section>
 
@@ -319,6 +165,17 @@
       </div>
     </footer>
   </main>
+
+  <!-- Modal for Sustainable Fashion -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <span class="modal-close">&times;</span>
+      <h3>Sustainable Fashion Futures</h3>
+      <p>Conducted a mixed-methods research and engineering study to reduce textile waste using AI-driven demand forecasting,
+      IoT supply chain signals, and blockchain traceability. Validated models via cross-validation and real-time testing.
+      Worked with industry stakeholders to identify adoption opportunities.</p>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
