--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
               <button id="reveal-email" class="btn small">Reveal & copy</button>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/harini3" target="_blank" rel="noopener">LinkedIn</a>
             </li>
             <li>
-              <a href="https://github.com/your-github" target="_blank" rel="noopener">GitHub</a>
+              <a href="https://github.com/harini-murugesan30" target="_blank" rel="noopener">GitHub</a>
             </li>
           </ul>
         </div>
@@ -137,23 +137,110 @@
       <p class="muted">Selected projects emphasizing measurable impact, technical depth, and production readiness — tailored for recruiters in Germany / DACH.</p>
 
       <div class="projects-grid">
-        <!-- Example Project Card -->
+        <!-- Each project card will go here -->
+        <!-- Project 1 -->
         <article class="project-card">
-          <img src="assets/project-placeholder.jpg" alt="Sustainable Fashion project" class="project-thumb">
+          <img src="assets/project1.jpg" alt="Sustainable Fashion project" class="project-thumb">
           <div class="project-body">
             <h3>Sustainable Fashion Futures</h3>
-            <p class="project-tag">AI, IoT & Blockchain for reducing environmental impact</p>
-            <p>
-              Built predictive models (FFNetBoost) for demand forecasting, integrated IoT supply chain data and blockchain traceability, estimating a ~10% reduction in textile waste.
-            </p>
-            <p><span class="counter" data-target="10">0</span>% estimated waste reduction</p>
+            <p class="project-tag">AI, IoT & Blockchain</p>
+            <p>Predictive models + IoT & blockchain for supply chain traceability. ~<span class="counter" data-target="10">0</span>% waste reduction.</p>
             <div class="project-links">
               <a href="#" class="view-details" data-modal="modal1">View Details</a>
             </div>
           </div>
         </article>
 
-        <!-- Add more project cards here using same structure -->
+        <!-- Project 2 -->
+        <article class="project-card">
+          <img src="assets/project2.jpg" alt="Credit Card Routing Optimization" class="project-thumb">
+          <div class="project-body">
+            <h3>Credit Card Routing Optimization</h3>
+            <p class="project-tag">Random Forest & SHAP</p>
+            <p>Optimized PSP routing with ~<span class="counter" data-target="35">0</span>% accuracy boost vs baseline.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal2">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 3 -->
+        <article class="project-card">
+          <img src="assets/project3.jpg" alt="Credit Card Fraud Detection" class="project-thumb">
+          <div class="project-body">
+            <h3>Credit Card Fraud Detection</h3>
+            <p class="project-tag">Ensemble Models</p>
+            <p>Detected ~<span class="counter" data-target="2020">0</span> frauds/month with >90% precision/recall.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal3">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 4 -->
+        <article class="project-card">
+          <img src="assets/project4.jpg" alt="Real-time Data Pipeline" class="project-thumb">
+          <div class="project-body">
+            <h3>Real-time Data Pipeline</h3>
+            <p class="project-tag">Kafka, Spark, HDFS</p>
+            <p>Processed 1M+ tweets with ~<span class="counter" data-target="60">0</span>% faster processing time.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal4">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 5 -->
+        <article class="project-card">
+          <img src="assets/project5.jpg" alt="Sales Intelligence Framework" class="project-thumb">
+          <div class="project-body">
+            <h3>Sales Intelligence Framework</h3>
+            <p class="project-tag">SQL (SSMS)</p>
+            <p>Identified high-performing products & VIPs — potential ROI +<span class="counter" data-target="20">0</span>%.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal5">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 6 -->
+        <article class="project-card">
+          <img src="assets/project6.jpg" alt="Akasa Air Destination Ranking" class="project-thumb">
+          <div class="project-body">
+            <h3>Akasa Air Destination Ranking</h3>
+            <p class="project-tag">Survey & Travel Data</p>
+            <p>Improved route selection, projecting ~<span class="counter" data-target="22">0</span>% revenue gain.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal6">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 7 -->
+        <article class="project-card">
+          <img src="assets/project7.jpg" alt="IPL Tableau Dashboard" class="project-thumb">
+          <div class="project-body">
+            <h3>IPL Tableau Dashboard</h3>
+            <p class="project-tag">Tableau</p>
+            <p>Interactive dashboard for 1,000+ matches — key stats & filters.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal7">View Details</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 8 -->
+        <article class="project-card">
+          <img src="assets/project8.jpg" alt="Airbnb NYC Analysis" class="project-thumb">
+          <div class="project-body">
+            <h3>Airbnb NYC Analysis</h3>
+            <p class="project-tag">EDA & Visualization</p>
+            <p>Analyzed 48K+ listings — found 52% entire homes, demand in Brooklyn & Manhattan.</p>
+            <div class="project-links">
+              <a href="#" class="view-details" data-modal="modal8">View Details</a>
+            </div>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -166,16 +253,15 @@
     </footer>
   </main>
 
-  <!-- Modal for Sustainable Fashion -->
-  <div id="modal1" class="modal">
-    <div class="modal-content">
-      <span class="modal-close">&times;</span>
-      <h3>Sustainable Fashion Futures</h3>
-      <p>Conducted a mixed-methods research and engineering study to reduce textile waste using AI-driven demand forecasting,
-      IoT supply chain signals, and blockchain traceability. Validated models via cross-validation and real-time testing.
-      Worked with industry stakeholders to identify adoption opportunities.</p>
-    </div>
-  </div>
+  <!-- Modals -->
+  <div id="modal1" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Sustainable Fashion Futures</h3><p>Developed predictive models (FFNetBoost) integrating IoT supply chain data and blockchain to enhance traceability, achieving ~10% estimated waste reduction.</p></div></div>
+  <div id="modal2" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Credit Card Routing Optimization</h3><p>Built Random Forest model with SHAP explainability to optimize PSP routing across 50K+ transactions — improved accuracy by 35% vs baseline.</p></div></div>
+  <div id="modal3" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Credit Card Fraud Detection</h3><p>Created ensemble model (Random Forest) detecting ~2,020 frauds/month with >90% precision/recall, reducing false negatives to ~39/month.</p></div></div>
+  <div id="modal4" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Real-time Data Pipeline</h3><p>Built a Kafka-Spark-HDFS pipeline processing 1M+ tweets in batches with 60% faster performance. Docker & Terraform automation enabled 100% reproducible infra in <10 minutes.</p></div></div>
+  <div id="modal5" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Sales Intelligence Framework</h3><p>Designed SQL-based framework for retail business — identified high-performing products & VIP segments, enabling marketing strategies with up to 20% potential ROI increase.</p></div></div>
+  <div id="modal6" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Akasa Air Destination Ranking</h3><p>Developed ranking model using survey & travel data to improve international route selection, projecting 18–22% revenue gain.</p></div></div>
+  <div id="modal7" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>IPL Tableau Dashboard</h3><p>Created interactive Tableau dashboard for 2008–2017 IPL data — supported filters for 1,000+ matches, 8 teams, and player stats.</p></div></div>
+  <div id="modal8" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Airbnb NYC Analysis</h3><p>Analyzed 48K+ Airbnb NYC listings — identified that 52% of stays were entire homes, with demand concentrated in Brooklyn & Manhattan.</p></div></div>
 
   <script src="script.js"></script>
 </body>
