--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="banner" role="img" aria-label="banner image" style="background-image: url('assets/banner.jpg');"></div>
     <nav class="nav">
       <div class="brand">
-        <img src="assets/profile-placeholder.jpg" alt="Harini Murugesan" class="brand-avatar">
         <div class="brand-text">
           <div class="name">Harini Murugesan</div>
           <div class="tagline">Turning data into impactful insights</div>
@@ -89,7 +88,7 @@
             <div class="muted">IIIT Bangalore • Nov 2021 – Dec 2022 • GPA 3.64/4</div>
           </div>
           <div class="timeline-right">
-            Focus on applied machine learning, data engineering, and model evaluation practices.
+            Focus on applied machine learning, data analytics, and business intelligence.
           </div>
         </div>
 
