--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <!-- Each project card will go here -->
         <!-- Project 1 -->
         <article class="project-card">
-          <img src="assets/project1.jpg" alt="Sustainable Fashion project" class="project-thumb">
+          <img src="assets/project1.jpeg" alt="Sustainable Fashion project" class="project-thumb">
           <div class="project-body">
             <h3>Sustainable Fashion Futures</h3>
             <p class="project-tag">AI, IoT & Blockchain</p>
@@ -152,7 +152,7 @@
 
         <!-- Project 2 -->
         <article class="project-card">
-          <img src="assets/project2.jpg" alt="Credit Card Routing Optimization" class="project-thumb">
+          <img src="assets/project2.png" alt="Credit Card Routing Optimization" class="project-thumb">
           <div class="project-body">
             <h3>Credit Card Routing Optimization</h3>
             <p class="project-tag">Random Forest & SHAP</p>
@@ -178,7 +178,7 @@
 
         <!-- Project 4 -->
         <article class="project-card">
-          <img src="assets/project4.jpg" alt="Real-time Data Pipeline" class="project-thumb">
+          <img src="assets/project4.png" alt="Real-time Data Pipeline" class="project-thumb">
           <div class="project-body">
             <h3>Real-time Data Pipeline</h3>
             <p class="project-tag">Kafka, Spark, HDFS</p>
@@ -244,10 +244,10 @@
     </section>
 
     <footer class="site-footer">
-      <div>© <span id="year"></span> Harini Murugesan — Built with ❤️ • Hosted on GitHub Pages</div>
+      <div> Harini Murugesan </div>
       <div class="footer-links">
-        <a href="https://github.com/your-github" target="_blank" rel="noopener">GitHub</a>
-        <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/harini-murugesan30" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://www.linkedin.com/in/harini3" target="_blank" rel="noopener">LinkedIn</a>
       </div>
     </footer>
   </main>
