--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
 <script src="script.js"></script>
 
- /* <!-- Modals -->
+  <!-- Modals 
   <div id="modal1" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Sustainable Fashion Futures</h3><p>Developed predictive models (FFNetBoost) integrating IoT supply chain data and blockchain to enhance traceability, achieving ~10% estimated waste reduction.</p></div></div>
   <div id="modal2" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Credit Card Routing Optimization</h3><p>Built Random Forest model with SHAP explainability to optimize PSP routing across 50K+ transactions — improved accuracy by 35% vs baseline.</p></div></div>
   <div id="modal3" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Credit Card Fraud Detection</h3><p>Created ensemble model (Random Forest) detecting ~2,020 frauds/month with >90% precision/recall, reducing false negatives to ~39/month.</p></div></div>
@@ -396,6 +396,7 @@
   <div id="modal7" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>IPL Tableau Dashboard</h3><p>Created interactive Tableau dashboard for 2008–2017 IPL data — supported filters for 1,000+ matches, 8 teams, and player stats.</p></div></div>
   <div id="modal8" class="modal"><div class="modal-content"><span class="modal-close">&times;</span><h3>Airbnb NYC Analysis</h3><p>Analyzed 48K+ Airbnb NYC listings — identified that 52% of stays were entire homes, with demand concentrated in Brooklyn & Manhattan.</p></div></div>
 
-  <script src="script.js"></script> */
+  <script src="script.js"></script> -->
+        
 </body>
 </html>
